AI Model Integration

--- a/WealthWise.API/WealthWise.API.csproj
+++ b/WealthWise.API/WealthWise.API.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\**" />
+    <Content Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
@@ -20,10 +27,6 @@
     <ProjectReference Include="..\WealthWise.ServiceDefaults\WealthWise.ServiceDefaults.csproj" />
     <ProjectReference Include="..\WealthWise.Shared\WealthWise.Shared.csproj" />
     <ProjectReference Include="..\WealthWise.UI\WealthWise.UI.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
