--- a/WealthWise.AppHost/Properties/launchSettings.json
+++ b/WealthWise.AppHost/Properties/launchSettings.json
@@ -5,24 +5,12 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:17296;http://localhost:15114",
+      "applicationUrl": "https://localhost:17296",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21169",
         "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22218"
-      }
-    },
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:15114",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DOTNET_ENVIRONMENT": "Development",
-        "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19026",
-        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20296"
       }
     }
   }
